# CienciasDaComputacao---C

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  primeiro.c  questao1.c  questao10.c  questao11.c  questao12.c  questao13.c  questao14.c  questao15.c  questao17.c  questao18.c  questao19.c  questao2.c  questao20.c  questao21.c  questao3.c  questao4.c  questao5.c  questao6.c  questao7.c  questao8.c  questao9.c  questão16.c  testes.c
beecrowd/: area_do_circulo.c
