cmake_minimum_required(VERSION 3.28)
project(Unoesc_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Unoesc_C
        primeiro.c
        questao1.c
        questao2.c
        questao3.c
        questao4.c
        questao5.c
        questao6.c
        questao7.c
        questao8.c
        questao9.c
        questao10.c
        questao11.c
)
